Update Ima, Footer, Product Detail ...

--- a/webthuongmaidientu/src/app/Frontend/Section/footer/footer.component.html
+++ b/webthuongmaidientu/src/app/Frontend/Section/footer/footer.component.html
@@ -24,7 +24,7 @@
     <footer class="footer">
         <div class="footer_end">
             <div class="footer_end_item">
-                <img src="./assets/img/logo.png" alt="">
+                <img src="./assets/img/logo.png" alt="" width="200px">
             </div>
             <div class="footer_end_item">
                 <h4 class="footer_end_item_title">QUICK LINKS</h4>
@@ -58,7 +58,7 @@
                     <a href="#" class="footerChild__link">Terms of Service</a>
                 </div>
                 <div class="footerChild__item">
-                    <i class="far fa-copyright"></i>2021 INTELLECTUAL. All rights reserved.
+                    <i class="far fa-copyright"></i> 2021 INTELLECTUAL. All rights reserved.
                 </div>
             </div>
         </div>
