--- a/webthuongmaidientu/src/app/Frontend/Section/header/header.component.html
+++ b/webthuongmaidientu/src/app/Frontend/Section/header/header.component.html
@@ -15,24 +15,24 @@
             <li class="header_menu_item"><a routerLink="/home">Contact</a></li>
         </ul>
 
-        <ul class="header_icon">
-            <li class="header_icon_item">
-                <a routerLink="/cart">
-                    <i class="fas fa-shopping-cart"></i>
-                    <!-- <span class="numOfCart"> {{cartLength}} </span> -->
-
-                </a>
-            </li>
-            <!--Login-->
-            <li class="header_icon_item ">
-                <a routerLink="login"><i class="fas fa-user"></i></a>
-            </li>
+        <ul class="header_icon" style="margin-right: 20px;">
             <li class="header_icon_item" style="margin-right: 10px;">
                 <form class="d-flex" (ngSubmit)="onSubmit()" [formGroup]="formSearch">
                     <input class="form-control me-2" type="search" placeholder="Tìm kiếm" formControlName="search">
                     <button class="btn btn-outline-dark" type="submit"><i
                             class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
+            </li>
+            <li class="header_icon_item">
+                <a routerLink="/cart">
+                    <i class="fas fa-shopping-cart"></i>
+                    <span class="numOfCart"> {{cartLength}} </span>
+
+                </a>
+            </li>
+            <!--Login-->
+            <li class="header_icon_item ">
+                <a routerLink="login"><i class="fas fa-user"></i></a>
             </li>
 
 
