--- a/webthuongmaidientu/src/app/Frontend/Section/footer/footer.component.css
+++ b/webthuongmaidientu/src/app/Frontend/Section/footer/footer.component.css
@@ -415,7 +415,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .footer_end {
   margin-top: 5rem;
-  height: 30rem;
+  height: 22rem;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -423,19 +423,19 @@ input[type="number"]::-webkit-outer-spin-button {
   border-top: 2px #e1e1e1 solid;
 }
 .footer_end_item {
+  margin-left: 5%;
   width: 33.3%;
   padding-top: 5.5rem;
 }
 .footer_end_item_title {
-  font-size: 1.7rem;
+  font-size: 1.5rem;
   font-weight: 600;
-  padding-bottom: 1.5rem;
+  padding-bottom: 1rem;
   text-transform: uppercase;
   text-align: left;
 }
 .footer_end_item_sub {
-  font-size: 1.5rem;
-  padding-bottom: 1rem;
+  font-size: 1.2rem;
   text-align: left;
 }
 .footer_end_item_social {
@@ -453,7 +453,7 @@ input[type="number"]::-webkit-outer-spin-button {
   float: left;
 }
 .footer_end_item img {
-  width: 70%;
+  width: 250px
 }
 
 .footerChild {
@@ -464,15 +464,15 @@ input[type="number"]::-webkit-outer-spin-button {
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  padding: 2.5rem 0rem;
+  padding: 1.8rem 0rem;
 }
 .footerChild__item {
   color: #666666;
-  font-size: 1.3rem;
+  font-size: 1rem;
 }
 .footerChild__link {
   color: #666666;
-  font-size: 1.3rem;
+  font-size: 1rem;
   margin-right: 1.5rem;
 }
 
