--- a/webthuongmaidientu/src/app/Frontend/home/home.component.css
+++ b/webthuongmaidientu/src/app/Frontend/home/home.component.css
@@ -1,3 +1,21 @@
 .box{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    overflow: hidden;
+    transition: 0.2s linear;
+}
+.box :hover{
+    transform: scale(1.1);
     cursor: pointer;
+    transition: 0.3s linear;
+}
+.my-pagination /deep/ 
+.ngx-pagination .current {
+    background: black;
+    color: white;
+    border-radius: 40%;
+    font-size: 1.1rem;
+    text-align: center;
 }
