--- a/webthuongmaidientu/src/app/Frontend/register/register.component.html
+++ b/webthuongmaidientu/src/app/Frontend/register/register.component.html
@@ -1,10 +1,10 @@
 <div class="container">
     <main>
-        <div class="py-5 text-center">
+        <!-- <div class="py-5 text-center">
             <img class="d-block mx-auto mb-4" src="/assets/img/logo.png" alt="" width="200px" height="auto">
 
 
-        </div>
+        </div> -->
         <div class="wrap">
 
             <div class="main__form">
