--- a/webthuongmaidientu/src/app/Frontend/categoryproduct/categoryproduct.component.css
+++ b/webthuongmaidientu/src/app/Frontend/categoryproduct/categoryproduct.component.css
@@ -1,4 +1,4 @@
-.box{
+.box-img{
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -6,7 +6,7 @@
     overflow: hidden;
     transition: 0.2s linear;
 }
-.box :hover{
+.box-img :hover{
     transform: scale(1.1);
     cursor: pointer;
     transition: 0.3s linear;
