--- a/webthuongmaidientu/src/app/Frontend/home/home.component.html
+++ b/webthuongmaidientu/src/app/Frontend/home/home.component.html
@@ -2,21 +2,84 @@
 
 <div class="container text-center">
     <div class="row">
-        <div class="col-3" *ngFor="let a of Products | paginate: { itemsPerPage: 6, currentPage: page }">
-            <div class="box" [routerLink]="['/product/', a.sanPhamId]">
-                <img src="{{ a.mainImg }}" class="card-img-top" alt="" style="width: 250px; height: 250px" />
-                <div class="card-body">
-                    <h5 class="card-text text-uppercase">{{ a.sanPhamId }}</h5>
-                    <h5 class="card-text text-uppercase">{{ a.sanPhamName }}</h5>
-                    <h5 class="card-text text-danger">Giá: {{ a.stringPrice }} VNĐ</h5>
+        <div>
+            <div class="new_product_title">
+                <h2>New Product</h2>
+                <div class="row">
+                    <div class="col-lg-3 col-md-4 col-sm-6"
+                        *ngFor="let a of Products | paginate: { itemsPerPage: 4, currentPage: page }">
+                        <div class="box" [routerLink]="['/product/', a.sanPhamId]">
+                            <div class="box-img">
+                                <img src="{{ a.mainImg }}" class="card-img-top" alt=""
+                                    style="width: 250px; height: 250px" />
+                            </div>
+                            <div class="card-body">
+
+                                <h5 class="card-text text-uppercase text-truncate">{{ a.sanPhamName }}</h5>
+                                <!-- <ul>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                    <li><i class="fas fa-star"></i></li>
+                                </ul> -->
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                                <h5 class="card-text text-danger">Giá: {{ a.stringPrice }} VNĐ</h5>
+                            </div>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
         </div>
-        <div class="mt-5">
+        <!-- <div class="mt-5">
             <pagination-controls (pageChange)="page = $event" previousLabel="" nextLabel="" class="my-pagination"
                 screenReaderPaginationLabel="Pagination" screenReaderPageLabel="page"
                 screenReaderCurrentLabel="You're on page">
             </pagination-controls>
+        </div> -->
+
+        <!-- You May Like -->
+        <div class="new_product">
+            <div class="new_product_title">
+                <h2>You May Like</h2>
+                <div class="row">
+                    <div class="col-lg-3 col-md-4 col-sm-6"
+                        *ngFor="let a of Products2 | paginate: { itemsPerPage: 4, currentPage: page }">
+                        <div class="box" [routerLink]="['/product/', a.sanPhamId]">
+                            <div class="box-img">
+                                <img src="{{ a.mainImg }}" class="card-img-top" alt=""
+                                    style="width: 250px; height: 250px" />
+                            </div>
+                            <div class="card-body">
+
+                                <h5 class="card-text text-uppercase text-truncate">{{ a.sanPhamName }}</h5>
+                                <!-- <ul>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                            </ul> -->
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                                <h5 class="card-text text-danger">Giá: {{ a.stringPrice }} VNĐ</h5>
+                            </div>
+                        </div>
+
+                    </div>
+
+
+                </div>
+            </div>
         </div>
     </div>
 </div>
