--- a/webthuongmaidientu/src/app/Frontend/categoryproduct/categoryproduct.component.html
+++ b/webthuongmaidientu/src/app/Frontend/categoryproduct/categoryproduct.component.html
@@ -1,16 +1,45 @@
 <div class="container text-center mt-5">
     <div class="row">
-        <div class="col-3" *ngFor="let a of listProductCategory">
+        <!-- <div class="col-3" *ngFor="let a of listProductCategory">
             <div class="box" [routerLink]="['/product/', a.sanPhamId]">
                 <div class="box-img">
                     <img src="{{ a.mainImg }}" class="card-img-top" alt="" style="width: 250px; height: 250px" />
                 </div>
                 <div class="card-body">
-                    <!-- <h5 class="card-text text-uppercase">{{ a.sanPhamId }}</h5> -->
+                  
                     <h5 class="card-text text-uppercase">{{ a.sanPhamName }}</h5>
                     <h5 class="card-text text-danger">Giá: {{ a.stringPrice }} VNĐ</h5>
                 </div>
             </div>
+        </div> -->
+
+        <div class="row">
+            <div class="col-lg-3 col-md-4 col-sm-6" *ngFor="let a of listProductCategory">
+                <div class="box" [routerLink]="['/product/', a.sanPhamId]">
+                    <div class="box-img">
+                        <img src="{{ a.mainImg }}" class="card-img-top" alt="" style="width: 250px; height: 250px" />
+                    </div>
+                    <div class="card-body">
+
+                        <h5 class="card-text text-uppercase text-truncate">{{ a.sanPhamName }}</h5>
+                        <!-- <ul>
+                            <li><i class="fas fa-star"></i></li>
+                            <li><i class="fas fa-star"></i></li>
+                            <li><i class="fas fa-star"></i></li>
+                            <li><i class="fas fa-star"></i></li>
+                            <li><i class="fas fa-star"></i></li>
+                        </ul> -->
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <span class="fa fa-star"></span>
+                        <h5 class="card-text text-danger">Giá: {{ a.stringPrice }} VNĐ</h5>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </div>
 </div>
