--- a/webthuongmaidientu/src/app/Frontend/home/home.component.css
+++ b/webthuongmaidientu/src/app/Frontend/home/home.component.css
@@ -1,3 +1,7 @@
+.box{
+    border: 1px solid #e4e4e4;
+    border-radius: 15px;
+}
 .box-img{
     width: 100%;
     height: 100%;
@@ -17,4 +21,13 @@
     color: white;
     font-size: 1.1rem;
     text-align: center;
+}
+.new_product{
+    margin-top: 20px;
+}
+hr{
+    width: 300px;
+    margin:0 auto 20px ;
+    color: purple;
+    height: 2px;
 }
